CLI and package scaffolding.
Should be installable and the CLI should be there but do nothing.

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,3 +2,10 @@
 include:
   - project: shore/ci-stuff
     file: templates/pre-commit.yml
+  - project: shore/ci-stuff
+    file: templates/python.yml
+
+install-wheel:
+  extends: .install-wheel
+  script:
+    - deepclean -h
